# poetrify

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
news/: 132.bugfix  3.misc  34.bugfix  4.feature  4.misc  8.misc
src/pipenv2poetry/: cli.py  core.py
src/poetrify/: api.py  cli.py  commands.py  core.py  files.py  http.py  packages.py
tests/: conftest.py  test_api.py  test_core.py  test_files.py  test_pipenv2poetry.py  test_poetrify.py
tests/fixtures/: Pipfile  non_exists_requirements.txt  requirements.txt  various_symbols.txt
tests/fixtures/pypi/: adb-shell.json  atomicwrites.json  attrs.json  django.json  more-itertools.json  pluggy.json  py.json  pytest.json  pytz.json  six.json
tests/repos/foo/: LICENSE  Pipfile
tests/repos/requirements_txt/: requirements.txt
