[tool.poetry]
name = "poetrify"
version = "0.2.0"
description = "Pipfile to pyproject.toml for Poetry"
readme = "README.md"
authors = ["kk6 <hiro.ashiya@gmail.com>"]
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = "^0.5.3"
cleo = "^0.7.2"
licensename = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
poetrify = "poetrify.cli:application.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
