[tool.poetry]
name = "poetrify"
version = "0.4.2"
description = "Pipfile to pyproject.toml for Poetry"
readme = "README.md"
authors = ["kk6 <hiro.ashiya@gmail.com>"]
repository = "https://github.com/kk6/poetrify"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = ">=0.5.3,<0.8.0"
cleo = ">=0.7.2,<0.9.0"
licensename = "^0.4.2"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.12"
towncrier = "^21.3"
pytest-cov = "^2.11"
responses = "^0.13.2"

[tool.poetry.scripts]
poetrify = "poetrify.cli:application.run"

[tool.towncrier]
package = "poetrify"
filename = "CHANGELOG.rst"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/towncrier_template.rst"
issue_format = "`#{issue} <https://github.com/kk6/poetrify/issues/{issue}>`_"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
